fix: fix summary paragraph spacing and taxonomy term pages
- replace inline display with normal block paragraphs
  in post summaries on home page
- add term.html layout for Hugo 0.154+ compatibility

--- a/assets/css/_page/_home.scss
+++ b/assets/css/_page/_home.scss
@@ -139,12 +139,7 @@
       p {
         font-size: 1rem;
         line-height: 1.5;
-        display: inline;
-
-        &::after {
-          content: "\A";
-          white-space: pre;
-        }
+        margin-bottom: 0.5em;
       }
 
       h2 {
